# ScreenSpaceReflectionsOpenGL

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  utility.cpp  utility.h
working_dir/: imgui.ini
working_dir/shaders/: cathedral.frag  cathedral.vert  floor.frag
